# mcp-qiskit

./: .gitignore  README.md  claude_desktop_config.json  index.html  main.py  mcp_definition.json  pyproject.toml  qiskit_mcp.py  requirements.txt  run_mcp.sh  run_server.sh  test_client.py  test_imports.py
api/: __init__.py  models.py
api/routes/: mcp.py
circuits/: __init__.py  bell_circuit.py  custom_circuit.py  execute_circuit.py  ibm_token.py  list_backends.py
tools/: __init__.py  execute_circuit.py  list_backends.py
