[project]
name = "mcp-qiskit"
version = "0.1.0"
description = "A FastMCP server that exposes quantum circuit functionality as Model Context Protocol (MCP) endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
]
